# iaschooldata

./: .Rbuildignore  .gitignore  404.html  CLAUDE.html  CLAUDE.md  DESCRIPTION  EXPANSION.html  EXPANSION.md  LICENSE-text.html  LICENSE.html  README.md  TODO.html  TODO.md  _pkgdown.yml  authors.html  authors.md  generate_readme_figs.R  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: cache.R  fetch_enrollment.R  get_raw_enrollment.R  iaschooldata-package.R  process_enrollment.R  tidy_enrollment.R  utils.R
articles/: enrollment-trends.html  enrollment-trends.md  index.html  index.md
man/: build_download_url.Rd  clean_district_name.Rd  clear_cache.Rd  download_historical_excel.Rd  download_iowa_excel.Rd  fetch_enr.Rd  get_available_years.Rd  get_historical_file_info.Rd  get_media_id.Rd  get_min_year.Rd  get_raw_cache_path.Rd  get_raw_enr.Rd  iaschooldata-package.Rd  iowa_base_url.Rd  is_historical_year.Rd  process_enr.Rd  process_historical_enr.Rd  safe_numeric.Rd  standardize_district_id.Rd  standardize_school_id.Rd
pyiaschooldata/: README.md  core.py  pyproject.toml
pyiaschooldata/pyiaschooldata/: __init__.py  core.py
reference/: build_download_url.html  build_download_url.md  cache_exists.html  cache_status.html  clean_district_name.html  clean_district_name.md  clean_school_name.html  clear_cache.html  clear_cache.md  create_state_aggregate.html  download_historical_excel.html  download_historical_excel.md  download_iowa_excel.html  download_iowa_excel.md  enr_grade_aggs.html  fetch_enr.html  fetch_enr.md  fetch_enr_multi.html  (+42 more)
(+4 files in other folders)
